test/runnable/typeof.cx
module typeof;

macro import cx.macros.assert;

void main() {
    int foo() { assert(false); }

    typeof(foo()) bla = 5;
}
