test/fail_compilation/afl_1.cx
module afl_1;

void test(int a,) { }
